# rr_audio_entrainer

./: .gitignore  CMakeLists.txt  README.md  entrain_speech.py  libpath_for_praat.sh  package.xml  rr_entrain_speech.praat  run_entrainer.sh
src/: entrain_speech_demo.py  entrain_speech_node.py  rr_entrain_speech.praat
